<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">福盈双色球</string>
    <string name="action_settings">Settings</string>
    <string name="main_btn_reload">重新加载</string>
    <string name="gohome_text">首页</string>
    <string name="gohistory_text">开奖</string>
    <string name="goanalysis_text">走势</string>
    <string name="gofilter_text">分析</string>
    <string name="gobucket_text">选号</string>
    <string name="timedown_title">距离本期开奖还有</string>
    <string name="timedown_status_open">正在热销中</string>
    <string name="issuenum_prefix">第</string>
    <string name="issuenum_postfix">期</string>
    <string name="release_time">开奖时间：</string>
    <string name="sell_amount">销售金额：</string>
    <string name="pool_amount">奖池金额：</string>
    <string name="hot_num_text">近期频出号码</string>
    <string name="red_text">红球</string>
    <string name="blue_text">蓝球</string>
    <string name="cool_num_text">长期未出号码</string>
    <string name="dan_num_text">下期推荐胆码</string>
    <string name="kill_num_text">下期推荐杀号</string>
    <string name="recommend_filter_text">异常属性</string>
    <string name="filter_bei_text">倍</string>
    <string name="filter_average_obm">平均遗漏：</string>
    <string name="filter_qi_text">期</string>
    <string name="releasetime_di_text">第</string>
    <string name="load_more_text">加载更多&#8230;</string>
    <string name="title_activity_lottery_detail">开奖详情</string>
    <string name="recommended_filters">推荐属性</string>
    <string name="all_filters">全部属性</string>
    <string name="title_activity_filter_detail">FilterDetailActivity</string>
    <string name="hit_count_text">出现次数</string>
    <string name="hit_prob_text">出现概率</string>
    <string name="average_obmission">平均遗漏</string>
    <string name="max_obmission">最大遗漏</string>
    <string name="current_obmission">当前遗漏</string>
    <string name="protential_prob">偏离指数</string>
    <string name="issue_text">期号</string>
    <string name="grid_lottery">开奖号码</string>
    <string name="grid_reds">红球</string>
    <string name="grid_blue">蓝</string>
    <string name="diagram_options">设置</string>
    <string name="diagram_sub_red_position_1">红球第一位</string>
    <string name="diagram_sub_red_position_2">红球第二位</string>
    <string name="diagram_sub_red_position_3">红球第三位</string>
    <string name="diagram_sub_red_position_4">红球第四位</string>
    <string name="diagram_sub_red_position_5">红球第五位</string>
    <string name="diagram_sub_red_position_6">红球第六位</string>
    <string name="diagram_sub_red_division_3">红球三分区</string>
    <string name="diagram_sub_red_division_4">红球四分区</string>
    <string name="diagram_sub_red_division_7">红球七分区</string>
    <string name="diagram_sub_red_division_11">红球十一分区</string>
    <string name="diagram_display_RedSumDetail">和值走势</string>
    <string name="diagram_display_RedContinuityDetail">连号走势</string>
    <string name="diagram_display_RedEvenOddDetail">奇偶走势</string>
    <string name="diagram_display_RedBigSmallDetail">大小走势</string>
    <string name="diagram_display_RedPrimaryCompositeDetail">质合走势</string>
    <string name="diagram_display_RedRemain0Detail">除3余0走势</string>
    <string name="diagram_display_RedRemain1Detail">除3余1走势</string>
    <string name="diagram_display_RedRemain2Detail">除3余2走势</string>
    <string name="diagram_display_RedDiv1Detail">三分区一区走势</string>
    <string name="diagram_display_RedDiv2Detail">三分区二区走势</string>
    <string name="diagram_display_RedDiv3Detail">三分区三区走势</string>
    <string name="diagram_display_RedHorizantalConnection">标记横连</string>
    <string name="diagram_display_RedVerticalConnection">标记竖连</string>
    <string name="diagram_display_RedObliqueConnection">标记斜连</string>
    <string name="diagram_display_RedOddConnection">标记奇连</string>
    <string name="diagram_display_RedEvenConnection">标记偶连</string>
    <string name="diagram_display_RedObmissionBreak">遗漏分层</string>
    <string name="display_nothing">无标记</string>
    <string name="goto_purcase_page">导出</string>
    <string name="title_activity_scheme_editor">编辑选号</string>
    <string name="title_activity_filter_editor">编辑条件</string>
    <string name="button_random">机选</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="unit_ge">个</string>
    <string name="label_blue_connection_type">红蓝组合方式</string>
    <string name="check_enable_matrix_filter">缩水矩阵（选6中5）</string>
    <string name="menu_display_none">不显示</string>
    <string name="menu_display_omission">遗漏</string>
    <string name="menu_display_temperature">冷热</string>
    <string name="menu_display_dansha">胆杀</string>
    <string name="title_activity_export_selection">导出选号</string>
    <string name="title_activity_attribute_filter_option">系统设置</string>
    <string name="menu_edit_filter_option">设置</string>
    <string name="menu_goto_weibo">建议意见</string>
    <string name="menu_clean_local_data">清除本地数据</string>
    <string name="label_waiting_for_compute">正在计算选号结果. . .</string>
    <string name="title_activity_help">帮助</string>
    <string name="text_terms">名词解释</string>
    <string name="help_icon_tooltip">点击查看相关帮助</string>
    <string name="menu_feedback">意见建议</string>
    <string name="menu_system_setting">系统设置</string>
    <string name="menu_my_purchases">我的彩票</string>
    <string name="menu_donation">友情赞助</string>
    <string name="menu_about">关于福盈</string>
    <string name="title_activity_donation">友情赞助</string>
    <string name="title_activity_about">关于福盈</string>
    <string name="title_activity_feedback">意见建议</string>
    <string name="title_activity_user_center">我的福盈</string>
    <string name="title_activity_lottery_selection">选号方案</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lottery_history">历史开奖</string>
    <string name="title_activity_lottery_trend_chart">号码走势</string>
    <string name="title_activity_lottery_attribute">属性分析</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_purchase_detail">选号详情</string>
    <string name="menu_display_markup">标记</string>
    <string name="title_activity_lottery_filter">过滤条件</string>
    <string name="title_activity_schemes">选号结果</string>
    <string name="title_activity_list_filling_helper">投注单填写</string>
    <string name="skip_splash_ad">跳过　%d秒</string>
    <string name="ad_flag">广告</string>
    <string name="ad_flag_separater">----------赞助商广告--------</string>
</resources>
