<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/filter_status_panel"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:padding="5dip"
        android:background="@drawable/background_panel_bottom">

        <TextView
            android:id="@+id/status_text"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="5dip"
            android:textSize="12dp"
            android:textColor="@color/dimgrey" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dip"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/background_button_light"
            android:text="@string/btn_confirm"
            android:textColor="@color/darkgrey" />
               
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/background_button_light"
            android:text="@string/btn_cancel"
            android:textColor="@color/darkgrey" />
        
        <ImageView
            android:id="@+id/helpIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/help_icon_tooltip"
            android:src="@drawable/icon_help" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/content_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/filter_status_panel"
        android:layout_alignParentTop="true"
        android:background="@color/white" >

    </FrameLayout>
    
</RelativeLayout>