<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/translucent"
    android:descendantFocusability="blocksDescendants"
    android:gravity="top|center"
    android:orientation="horizontal"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/purchase_status_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginBottom="5dp"
            android:gravity="left|center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuenum_prefix"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/issue_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuenum_postfix"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/release_time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/release_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginBottom="5dp"
            android:gravity="left|center" >

            <TextView
                android:id="@+id/cost_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/earning_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/darkred" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_goto" />

</LinearLayout>